--- a/feedly/users/templates/feedly frontend/editpro.html
+++ b/feedly/users/templates/feedly frontend/editpro.html
@@ -39,7 +39,6 @@
         //   }
         // }
 
-
         window.onscroll = function () { scrollFunction() };
 
         function scrollFunction() {
@@ -85,28 +84,28 @@
                         class="far fa-bell" style="margin-right:5%" style="margin-right:5%"></i>NOTIFICATION</button>
             </li>
             <li>
-
                 <div class="dropdown">
                     <button onclick="myFunction()" class="dropbtn"><i class="far fa-user"></i><i class="fa fa-caret-down"></i></button>
 
                 </div>
-
             </li>
         </ul>
     </header>
+
     <div id="myDropdown" class="dropdown-content">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
     </div>
 
+
     <div class="icon-bar">
         <a class="active" href="#"><i class="fa fa-user">
                 <p class="side-content">MY PROFILE</p>
             </i></a>
-        <!-- <a class="active" href="#"><i class="fa fa-home">
+        <a class="active" href="#"><i class="fa fa-home">
                 <p class="side-content">HOME</p>
-            </i></a> -->
+            </i></a>
         <a href="#"><i class="fa fa-chart-line">
                 <p class="side-content">POPULAR</p>
             </i></a>
@@ -134,89 +133,48 @@
         <img src="loginboy.jpg" style="height:100%;">
     </div>
     <div class="sfname">
-        <h2 >F/ART</h2></div>
-    <button type="button" class="subs">Subscribe</button>
+        <h2 >U/VINAYAKkkkkk</h2></div>
+        <button type="button" class="subs">Delete Account</button>
+    
+        <!-- <h3>Using CSS to style an HTML Form</h3> -->
 
-    <div class="row" style="margin-top:-3%">
-        <div class="leftcolumn">
-            <div class="cardpost">
-                <div class="cardh">
-                    
-                        <div class="dp"><img src="login-illustration-mahisadd.jpg" class="postdp"></div>
-                    <h3 style="padding-left:2%">TITLE HEADING</h3>
-                </div>
-                <div class="cardh">
-                    <h4>TITLE HEADING huui hjhyj kjkjoiu h</h4>
-                </div>
-                <img src="login-illustration-mahisadd.jpg" alt="Avatar" class="fakeimg">
-                <div class="cardf">
-                    <i class="like fa fa-thumbs-up"></i>
-                    <p style="padding-left:9px">200</p>
-                    <i class="like fa fa-thumbs-down" style="padding-left:9px"></i>
-                    <div id="cmntmodal" onclick="document.getElementById('id03').style.display='block'"><i class="like fa fa-comments"
-                            style="padding-left:9px"></i></div>
-                    <p style="padding-left:9px">200</p>
-                    <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
-                </div>
-            </div>
-            <div class="cardpost">
-                <div class="cardh">
-                    <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
-                    <h3 style="padding-left:2%">TITLE HEADING</h3>
-                </div>
-                <div class="cardh">
-                    <h4>TITLE HEADING huui hjhyj kjkjoiu h</h4>
-                </div>
-                <img src="loginboy.jpg" alt="Avatar" class="fakeimg">
-                <div class="cardf">
-                    <i class="like fa fa-thumbs-up"></i>
-                    <p style="padding-left:9px">200</p>
-                    <i class="like fa fa-thumbs-down" style="padding-left:9px"></i>
-                    <div id="cmntmodal" onclick="document.getElementById('id03').style.display='block'"><i class="like fa fa-comments"
-                            style="padding-left:9px"></i></div>
-                    <p style="padding-left:9px">200</p>
-                    <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
-                </div>
-            </div>
+        <div class="edit">
+          <form action="/action_page.php">
+            <label for="fname">Username:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Username">
+
+            <label for="fname">Email:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Email">
+
+            <label for="fname">First Name:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+            <label for="fname">Last Name:</label>
+            <input type="text" id="fname" name="firstname" placeholder="Your last name..">
+        
+            <label for="gender">Gender:</label>
+            <select id="gender" name="gender">
+              <option value="australia">Male</option>
+              <option value="canada">Female</option>
+            </select>
+
+            <label for="lname">Date of Birth:</label>
+            <input type="text" id="lname" name="lastname" placeholder="yyyy-mm-dd">
+
+            <label for="fname">Contact no.:</label>
+            <input type="text" id="fname" name="firstname" placeholder="**********">
+          
+            <input type="submit" value="Edit" class="editbtn">
+          </form>
         </div>
-        <div class="rightcolumn">
-            <div class="card">
-                <img src="explore-feed_preview.jpeg" class="fakeimg">
-                <h2 style="padding:6px">ABOUT COMMUNITY</h2>
-                <p style="padding:6px">Some text about me in culpa qui officia deserunt mollit anim..</p>
-            </div>
-            <div class="card">
-                <h3> RULES AND REGULATIONS </h3>
-                <div class="comm">
-                    <p style="margin-left:5%">1).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
+        
 
-                </div>
-                <div class="comm">
-                    <p style="margin-left:5%">2).</p>
-                    <p style="margin-left:3%"> No harrasment</p>
-
-                </div>
-                <div class="comm">
-                    <p style="margin-left:5%">3).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
-
-                </div>
-                <div class="comm">
-                    <p style="margin-left:5%">4).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
-
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-
+    
     <div class="footer">
         <h2>Footer</h2>
     </div>
 
-    
+
 
 </body>
 
