--- a/feedly/users/templates/feedly frontend/pro.html
+++ b/feedly/users/templates/feedly frontend/pro.html
@@ -132,11 +132,8 @@
     <div class="pgimg">
         <img src="loginboy.jpg" style="height:100%;">
     </div>
-    <div style="display:flex;align-items: center;margin-top: -4%;">
-        <h2 class="sfname">F/ART</h2>
-        <button type="button" class="subs">Subscribe</button>
-    </div>
-    </div>
+    <div class="sfname">
+            <h2 >U/VINAYAKkkkkk</h2></div>
 
     <div class="row" style="margin-top:-3%">
         <div class="leftcolumn">
@@ -246,23 +243,21 @@
             <div class="card">
                 <h3> RULES AND REGULATIONS </h3>
                 <div class="comm">
-                    <p style="margin-left:5%">1).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
+                    
+                    <p style="margin-left:3%">1). No "bad" comments</p>
 
                 </div>
                 <div class="comm">
-                    <p style="margin-left:5%">2).</p>
-                    <p style="margin-left:3%"> No harrasment</p>
+                        <p style="margin-left:3%">1). No "bad" comments</p>
+
 
                 </div>
                 <div class="comm">
-                    <p style="margin-left:5%">3).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
+                        <p style="margin-left:3%">1). No "bad" comments</p>
 
                 </div>
                 <div class="comm">
-                    <p style="margin-left:5%">4).</p>
-                    <p style="margin-left:3%"> No "bad" comments</p>
+                        <p style="margin-left:3%">1). No "bad" comments</p>
 
                 </div>
             </div>
