--- a/feedly/users/templates/feedly frontend/search.html
+++ b/feedly/users/templates/feedly frontend/search.html
@@ -57,20 +57,14 @@
         }
 
 
-        function myFunction1(){
-            document.getElementById('myDIV1').style.display = "block";
-            document.getElementById('myDIV2').style.display = "none";
-            document.getElementById('myDIV3').style.display = "none";
-        }
+        
 
         function myFunction2(){
             document.getElementById('myDIV2').style.display = "block";
-            document.getElementById('myDIV1').style.display = "none";
             document.getElementById('myDIV3').style.display = "none";
         }
         function myFunction3(){
             document.getElementById('myDIV3').style.display = "block";
-            document.getElementById('myDIV1').style.display = "none";
             document.getElementById('myDIV2').style.display = "none";
         }
 
@@ -150,37 +144,77 @@
 
    
    <div class="srchmenu">
-       <button class="srchbarbtn" onclick="myFunction1()"><h2 class="srchbar">All</h2></button>
-       <button class="srchbarbtn" onclick="myFunction2()"><h2 class="srchbar">Communities</h2></button>
-       <button class="srchbarbtn" onclick="myFunction3()"><h2 class="srchbar">Posts</h2></button>
+       
+       <button class="srchbarbtn" onclick="myFunction2()"><h1 class="srchbar">Communities</h1></button>
+       <button class="srchbarbtn" onclick="myFunction3()"><h1 class="srchbar">Users</h1></button>
 
    </div>
 
-   <div id="myDIV1">
-        This is my DIV1 element.
-      </div>
+   
 
     <div id="myDIV2">
         <div class="srchc" >
                 <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
-                <h2>f/community</h2>
+                <h2 style="padding-left:7%;margin-top: -3%">f/community</h2>
+                <button type="button" class="btnsub sbtnsub" >Subscribe</button>
 
         </div>
+        <div class="srchc" >
+            <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+            <h2 style="padding-left:7%;margin-top: -3%">f/community</h2>
+            <button type="button" class="btnsub sbtnsub" >Subscribe</button>
+
+
+    </div>
+    <div class="srchc" >
+        <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+        <h2 style="padding-left:7%;margin-top: -3%">f/community</h2>
+        <button type="button" class="btnsub sbtnsub" >Subscribe</button>
+
+
+</div>
+<div class="srchc" >
+    <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+                <h2 style="padding-left:7%;margin-top: -3%">f/community</h2>
+                <button type="button" class="btnsub sbtnsub" >Subscribe</button>
+
+
+</div>
         </div>
         <div id="myDIV3">
-                This is my DIV3 element.
-            </div>
+            <div class="srchc" >
+                <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+                <h2 style="padding-left:7%;margin-top: -3%">U/vinayak</h2>
+                <button type="button" class="btnsub sbtnsub" >FOLLOW</button>
+
+        </div>
+        <div class="srchc" >
+            <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+            <h2 style="padding-left:7%;margin-top: -3%">U/vinayak</h2>
+            <button type="button" class="btnsub sbtnsub" >FOLLOW</button>
+
+
+    </div>
+    <div class="srchc" >
+        <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+        <h2 style="padding-left:7%;margin-top: -3%">U/vinayak</h2>
+        <button type="button" class="btnsub sbtnsub" >FOLLOW</button>
+
+
+</div>
+<div class="srchc" >
+    <div class="dp"><img src="feedly_logo.svg" class="postdp"></div>
+                <h2 style="padding-left:7%;margin-top: -3%">U/vinayak</h2>
+                <button type="button" class="btnsub sbtnsub" >FOLLOW</button>
+
+
+</div>
+        </div>
 
 
     <div class="footer">
         <h2>Footer</h2>
     </div>
-
-
-
-
-
-
 
 
 
