--- a/feedly/users/templates/delete_acc.html
+++ b/feedly/users/templates/delete_acc.html
@@ -10,8 +10,8 @@
 <br>
 <form method="post">
     {% csrf_token %}
-    <button value="1" name="des"> Yes,I'm sure  </button>
-    <button value ="2" name="des">No,I won't delete</button>
+    <button value="accept" name="des"> Yes,I'm sure  </button>
+    <button value ="reject" name="des">No,I won't delete</button>
 </form>
 {% endblock %}
 </body>
