--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -5,8 +5,8 @@
     <title>Feedly</title>
 </head>
 <body>
-{% for error in messages %}
-<p style="color: green">{{ error }}</p>
+{% for message in messages %}
+<p style="color: green">{{ message }}</p>
 {% endfor %}
 <h1>welcome to feedly</h1>
 {% if request.user.is_authenticated %}
@@ -34,18 +34,19 @@
         <img src="{{ post.post_by.myprofile.avatar.url }}" style="width:3vw;height:3vw;" alt="pic">
         <b><a href="{% url 'profile' post.post_by.id %}">{{ post.post_by.username }}</a> </b>
         <i> {{ post.post_on }}</i><br><br><b>{{ post.title }} </b>
+
+        {% if post.image %}
         <br>
         <br>
-        {% if post.image_post %}
         <img style="width: 40vw; height: 45vh;"
-          src="{{ post.image_post.url }}" alt="imagpost">
+          src="{{ post.image.url }}" alt="imagpost">
         {% endif %}
-        {%if post.text_post %}
-        <p>{{post.text_post }}</p>
+        {%if post.text %}
+        <p>{{post.text }}</p>
         {% endif %}
-        {% if post.video_post %}
+        {% if post.video %}
         <video width="600vw" height="400vw" controls>
-            <source src="{{ post.video_post.url }}" type="video/mp4"></video>
+            <source src="{{ post.video.url }}" type="video/mp4"></video>
         {% endif %}
         <p>Votes = {{ votes }}</p>
     </div>
