--- a/feedly/users/templates/createpost.html
+++ b/feedly/users/templates/createpost.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <p>Image</p>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     {% csrf_token %}
+
     {% for field in form %}
     <p>
         {{ field.label_tag }}<br>
@@ -17,7 +18,7 @@
     {% endfor %}
     </p>
     {% endfor %}
-    <button type="submit">Sign up</button>
+    <button type="submit">Upload</button>
 
 </form>
 </body>
