--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -1,108 +1,60 @@
-{% extends 'base.html' %}
-{% load staticfiles %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Feedly</title>
+</head>
+<body>
+{% for message in messages %}
+<p style="color: green">{{ message }}</p>
+{% endfor %}
+<h1>welcome to feedly</h1>
+{% if request.user.is_authenticated %}
+    <a href="{% url 'profile' user.id %}">Profile</a>
+{% endif %}
+    <br>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'createpost' user.id %}">Create Post</a>
+    {% else %}
+    <a href="{% url 'signup' %}"> Sign Up</a>
+{% endif %}
+    <br>
+    {% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}"> log out</a>
+    {% else %}
+    <a href="{% url 'login' %}"> Log In</a>
+    {% endif %}
+<br>
+<br>
+<div style="margin-left:25vw;margin-right:28vw">
 
 {% for post in object_list %}
-<div class="leftcolumn">
-<div class="cardpost">
-    <div class="cardh">
-        <div class="dp">
-            <a href="{{ post.post_by.myprofile.avatar.url }}"><img src="{{ post.post_by.myprofile.avatar.url }}" class="postdp"></a>
-        </div>
-        <a style="text-decoration:none" href="{% url 'profile' post.post_by.id %}"><h4 style="padding-left:2%">{{ post.post_by.username }}</h4></a>
-        <i> {{ post.post_on }}</i>
-    </div>
-    <div class="cardh">
+
+    <div style ="border:1px solid gray;padding:2vw">
+        <img src="{{ post.post_by.myprofile.avatar.url }}" style="width:3vw;height:3vw;" alt="pic">
+        <b><a href="{% url 'profile' post.post_by.id %}">{{ post.post_by.username }}</a> </b>
+        <i> {{ post.post_on }}</i><br><br><b>{{ post.title }} </b>
         {%if post.about %}
-        <h4>{{post.about }}</h4>
+        <p>{{post.about }}</p>
         {% endif %}
         {%if post.text %}
-        <h4>{{post.text }}</h4>
+        <p>{{post.text }}</p>
         {% endif %}
+        {% if post.image %}
+        <br>
+        <br>
+        <img style="width: 40vw; height: 45vh;"
+             src="{{ post.image.url }}" alt="imagpost">
+        {% endif %}
+        {% if post.video %}
+        <video width="600vw" height="400vw" controls>
+            <source src="{{ post.video.url }}" type="video/mp4"></video>
+        {% endif %}
+        <p>Votes = {{ votes }}</p>
+    </div>
+    <br>
 
-    </div>
-    {% if post.image %}
-    <img id="cmntmodal" onclick="document.getElementById('id03').style.display='block'" src="{{ post.image.url }}" alt="img_post" class="fakeimg">
-    {% endif %}
-    {% if post.video %}
-    <video id="cmntmodal" class="fakeimg" onclick="document.getElementById('id03').style.display='block'" controls>
-        <source src="{{ post.video.url }}" type="video/mp4"></video>
-    {% endif %}
-    <div class="cardf">
-        <i class="like fa fa-thumbs-up"></i>
-        <p style="padding-left:9px">200</p>
-        <i class="like fa fa-thumbs-down" style="padding-left:9px"></i>
-        <div id="cmntmodal" onclick="document.getElementById('id03').style.display='block'"><i class="like fa fa-comments"
-                                                                                               style="padding-left:9px"></i></div>
-        <p style="padding-left:9px">200</p>
-        <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
-    </div>
-</div>
-</div>
 {% endfor %}
-<div class="rightcolumn">
-    <div class="card">
-        <img src="/static/explore-feed_preview.jpeg" class="fakeimg">
-        <h2 style="padding:6px">HOME</h2>
-        <p style="padding:6px">Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-        <h3> TRENDING COMMUNITIES </h3>
-        <div class="comm">
-            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
-            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
-            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
-        </div>
-        <div class="comm">
-            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
-            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
-            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
-        </div>
-        <div class="comm">
-            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
-            <div style="margin-left:19%;margin-top:-10%"><p > R/art</p></div>
-            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
-        </div>
-        <div class="comm">
-            <div class="dp"><img src="/static/feedly_logo.svg" class="postdp"></div>
-            <div style="margin-left:19%;margin-top:-10%"><p > R/arthh</p></div>
-            <div class="ss"><button type="button" class="btnsub">Subscribe</button></div>
-        </div>
-    </div>
 </div>
-<div id="id03" class="modal">
-   <div class="cardpost modal-content" style="padding:20px;border-radius: 25px">
-    <span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>
-   <div class="cardh">
-      <div class="dp"><img src="login-illustration-mahisadd.jpg" class="postdp"></div>
-   <h3 style="padding-left:2%">TITLE HEADING</h3>
-   </div>
-   <div class="cardh">
-     <h4>TITLE HEADING huui hjhyj kjkjoiu h</h4>
-    </div>
-    <img src="login-illustration-mahisadd.jpg" alt="Avatar" class="fakeimg">
-    <div class="cardf">
-       <i class="like fa fa-thumbs-up"></i>
-       <p style="padding-left:9px">200</p>
-       <i class="like fa fa-thumbs-down" style="padding-left:9px"></i>
-       <i class="like fa fa-comments" style="padding-left:9px"></i>
-       <p style="padding-left:9px">200</p>
-       <i class="like fa fa-paper-plane" style="padding-left:9px"> </i>
-    </div>
-
-<h3>Your Comments:</h3>
-<div>
-<textarea rows="4" cols="50" name="comment" form="usrform"  placeholder="ggw" style="width:100%"></textarea>
-<div class="edittxt">
-<i class="fa fa-bold edits" ></i>
-<i class="fa fa-italic edits" ></i>
-<i class="fa fa-underline edits" ></i>
-<button type="submit" class="cmntbtn">comment</button>
-
-
-</div>
-</div>
-</div>
-</div>
-
-{% endblock %}
+</body>
+</html>
